--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-AUTH_SECRET="SYRoyXkwqCDYlpR4WHmErHxHkKB0oAJEVPFmmPnmENQ=" # Added by `npx auth`. Read more: https://cli.authjs.dev
-MONGO_URI="mongodb://localhost:27017/homeseek"
+JWT_SECRET="SYRoyXkwqCDYlpR4WHmErHxHkKB0oAJEVPFmmPnmENQ=" # Added by `npx auth`. Read more: https://cli.authjs.dev
+SERVER_PORT=5678
