--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4",
+    "resend": "^3.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
